# Kuboard

./: .gitignore  ARCHITECTURE_OVERVIEW.md  BUILD_GUIDE.md  CONTRIBUTING.md  FUNCTION_DOCUMENTATION.md  LICENSE  NOTICE  PERFORMANCE_OPTIMIZATIONS.md  README.md  RELEASE_GUIDE.md  THIRD_PARTY_LICENSES.md  UI_ORGANIZATION_GUIDE.md  build-local.ps1  build-local.sh  package-lock.json  package.json  release-local.ps1  release-local.sh  run-dev.sh  run-kuboard.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml  dev-build.yml
docs/: ARCHITECTURE_OVERVIEW.md  BUILD_GUIDE.md  FUNCTION_DOCUMENTATION.md  UI_ORGANIZATION_GUIDE.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  lib.rs  main.rs  types.rs  utils.rs
src-tauri/src/commands/: mod.rs  optimized.rs
src-tauri/src/kubernetes/: exec.rs  mod.rs  port_forward.rs  watch.rs
src-tauri/src/metrics/: mod.rs
src-tauri/tests/: README.md  multi-context.yaml  test-kubeconfig.yaml
src/lib/components/: ClusterMetrics.svelte  ClusterOverview.svelte  ConfigTab.svelte  CronJobDetails.svelte  CronJobsPanel.svelte  CustomResourcesTab.svelte  DaemonSetDetails.svelte  DaemonSetsPanel.svelte  DeploymentDetails.svelte  DeploymentsPanel.svelte  DonutChart.svelte  Header.svelte  LogsWindow.svelte  MetricsGraph.svelte  NetworkTab.svelte  NodesTab.svelte  PodDetails.svelte  PodsPanel.svelte  PortForwardManager.svelte  QuickActionsMenu.svelte  ReplicaSetDetails.svelte  ReplicaSetsPanel.svelte  ResourceDescribe.svelte  ResourceOverview.svelte  ResourceTabs.svelte  ServiceDetails.svelte  StatefulSetDetails.svelte  StatefulSetsPanel.svelte  (+4 more)
src/routes/: +page.svelte  page-optimized.svelte
testing_utils/: advanced-log-generator.yaml  log-generator-pod.yaml
(+6 files in other folders)
