[package]
name = "kuboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/yourusername/kuboard"
homepage = "https://github.com/yourusername/kuboard"
documentation = "https://github.com/yourusername/kuboard"
keywords = ["kubernetes", "dashboard", "desktop", "tauri", "rust"]
categories = ["development-tools", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kuboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
kube = { version = "0.97", features = ["client", "config", "runtime"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
secrecy = "0.10"
http = "1.0"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

